static/style.css
/* Navigation header */

.navbar-brand > img {
    position: relative;
    top: -20px;
    padding-right: 1em;
    float: left;
} 

@media (max-width: 768px) { 
  .navbar-brand {
      padding-right: 0;
  }
}

.alert-warning a {
    color: white;
    text-decoration: underline;
}


.contentwrap {
    padding-top: 22px;
}

@media (min-width: 768px) { 
  .contentwrap {
      padding-top: 42px;
  }
}

@media (min-width: 992px) { 
  .sidebarwrap {
    padding-top: 42px;
  }
}

footer ul.pull-right li:last-child {
    margin-right: 0;
}

.top-alert {
    margin-top: 32px;
    margin-bottom: 0px;
}


/* / */

#front .lead {
    margin-top: 32px;
}

#front form {
    margin-bottom: 48px;
}

/* /about */

#about {
}

/* /candidates */

.candidates > div {
    margin-top: 48px;
}

.candidate_list {
    margin-top: 20px;
    margin-bottom: 20px;
}

.no_email p {
    margin-top: 10px;
}

.candidate_list a {
    margin-right: 8px;
}

.candidate {
    margin-top: 8px;
}
.candidate .name {
    font-size: 20px;
    margin-bottom: 6px;
}
.candidate .email_them {
}

.candidate .this_is_me {
    margin-left: 0.5em;
}

@media (min-width: 768px) { 
  #follow_constituency {
    float: right;
  }
}

/* /upload_cv */

/* Make file upload button look good */

.btn-file {
  position: relative;
  overflow: hidden;
  margin-top: 24px;
}
.btn-file input[type=file] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  filter: alpha(opacity=0);
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}

#upload_cv form {
  margin-bottom: 2em;
}

#upload_cv .not_me {
    font-size: 15px;
    margin-left: 0.5em;
}

.is_is_not img {
    width: 99%;
    height: auto;
}

.is_is_not div {
    text-align: center;
}

.is_is_not .top {
    padding-bottom: 4px;
    font-weight: bold;
}
.is_is_not .bottom {
    padding-top: 6px;
    font-weight: bold;
}

.is_is_not {
    padding-top: 16px;
}

/* /show_cv and / */

/* See http://stackoverflow.com/a/12121929/284340 */
html,body        {height:100%;}
.frame_outer_wrapper   {width:100%;height:100%;background:#CCC;}
.frame_inner_wrapper        {position:relative;}
.frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
.frame_inner_wrapper iframe {position:absolute;top:0;left:0;width:100%; height:100%;}

.link_full_page {
    margin-bottom: 16px;
    text-align: center;
    padding-top: 6px;
}

#recent_cvs h2 {
    margin-bottom: 32px;
}

#all_cvs_link, #ynmp_link a {
    font-size: 20px;
}
#ynmp_link {
    margin-top: 32px;
}

#all_cvs h1 {
    margin-bottom: 48px;
}

#all_cvs nav {
    margin-top: 16px;
}


.show-cv-navbar .navbar-brand {
    padding-left: 12px;
}
.show-cv-navbar .btn-success {
    margin-top: 8px;
    margin-left: 8px;
}

.navbar-default.show-cv-navbar:hover .navbar-brand {
  color: white; 
}

.navbar-default.show-cv-navbar .navbar-brand, .navbar-default.show-cv-navbar .navbar-text {
  cursor: default;
}


@media (min-width: 768px) { 
  .show-cv-navbar .navbar-brand {
      padding-left: 40px;
      margin-left: 0px;
  }
}

#show_cv {
  height: 100%;
  overflow: hidden; /* prevent double scroll bars due to slight differences on some browsers */
}

#show_cv iframe {
  width: 100%;
  height: 100%;
}

.show-cv-alert-row {
  margin-left: 0;    
  margin-right: 0;    
  margin-bottom: 24px;
}

.show-cv-alert-row .col-xs-2, .show-cv-alert-row .col-xs-8 {
  padding-left: 0;
  padding-right: 0;
}

/* /email_candidates */

.dear-message {
  margin-left: 15px;
}

/* /tweet_candidates */

.done-button {
  margin-top: 48px;
}

